[package]
name = "rjournald"
version = "0.1.0"
authors = ["Artemis Tosini <me@artem.ist>"]
edition = "2018"
license = "LGPL-2.1"

[dependencies]
anyhow = "1.0"
async-io = "1.3"
bitflags = "1.2"
byteorder = "1.4"
futures = "0.3"
libc = "0.2"
memmap = "0.7"
nix = "0.20"
num-derive = "0.3"
num-traits = "0.2"
tokio = { version = "1.3", features = ["rt", "rt-multi-thread", "net", "fs", "io-std", "io-util", "macros", "sync"] }
